Fix CI: replace Java 21 List.getFirst/removeFirst with Java 17 compatible
- List.getFirst() → list.get(0)
- List.removeFirst() → list.remove(0)
- Deque.getFirst() → values.peek()